--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=\\\\iut.bx1\\Etudiants\\Home\\tduthil\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\tduthil\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
